--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:hsqldb:file:~/testdb
 spring.datasource.username=sa
 
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jackson.serialization.write_dates_as_timestamps=false
