fetch strategies added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,18 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
 spring.jackson.serialization.write_dates_as_timestamps=false
+
+
+# SPRING BOOT ACTUATOR
+info.app.name=Hot Eats Application
+info.app.description=Ordering food through app, delivered doorstep.
+info.app.version=1.0.0
+
+#SECURITY
+management.port=8081
+management.address=127.0.0.1
+management.security.enabled=false
+
+security.user.name=admin
+security.user.password=secret
+management.security.role=SUPERUSER
