--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:hsqldb:file:~/hsql/testdb;hsqldb.lock_file=false
+spring.datasource.url=jdbc:hsqldb:mem:testdb
 
 
 spring.datasource.username=sa
