--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.datasource.url=jdbc:hsqldb:mem:testdb
-
-
+spring.datasource.url=jdbc:hsqldb:file:/tmp/eatsdb
 spring.datasource.username=sa
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jackson.serialization.write_dates_as_timestamps=false
 
