--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jackson.serialization.write_dates_as_timestamps=false
-
+#spring.jpa.hibernate.use-new-id-generator-mappings=true
 
 # SPRING BOOT ACTUATOR
 info.app.name=Hot Eats Application
