--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.datasource.url=jdbc:hsqldb:file:/tmp/eatsdb
+
 spring.datasource.username=sa
 
 spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+spring.jpa.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jackson.serialization.write_dates_as_timestamps=false
