--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.format-sql=true
 spring.jpa.hibernate.format_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=EATS
 
 spring.jackson.serialization.write_dates_as_timestamps=false
 #spring.jpa.hibernate.use-new-id-generator-mappings=true
